fix(windowmanager): Hide scrollbars in buildview and entityeditor

--- a/editor/src/css.css
+++ b/editor/src/css.css
@@ -510,6 +510,8 @@ select.textInput:disabled{
 
 .editorContentWindowContent{
 	flex-grow: 1;
+}
+.editorContentWindowContent.scrollable {
 	overflow: auto;
 }
 .editorContentWindowContent.behindTopButtonBar{
